tasarimsal bazi duzenlemeler yapildi